gl31-master/src/test/deca/context/valid/complet/instanceof2.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
class A{}
class B extends A{}
{
    B b = new B();
    if(b instanceof A){
        print("ok");
    }
}
