gl31-master/src/test/deca/context/invalid/complet/bad_cast6.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 11: Erreur, mauvais type de conversion
//
// Historique:
//    cree le 24/01/2021
{
    int a;
    int b = (float)(a);
}

